2018-01-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* docbook/validatedinput.xml: Input field validation framework.

2018-01-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* window_handler.C (release_grabs): Don't ungrab the pointer if there's
	an active grab in progress, this should ungrab only if there was
	a passive grab.

2018-01-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement input_field_config.maximum_size.

	* Implement synchronized list layout manager columns.

2018-01-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Use the pane layout manager for file dialogs. Fix a file dialog
	bug when there are multiple directory entries that different only
	in their upper/lower/title case.

2018-01-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* Added the pane layout manager.

	* Replaced new_listlayoutmanager.rows with new_listlayoutmanager.height
	in order to accomodate the pane layout manager.

0.10
	Initial release.